--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	No copyright, use as you wish :P
+-->
 <head>
 	<title>example test page</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
